--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@lhci/cli": "^0.15.1",
     "@playwright/test": "^1.58.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
+    "@types/gtag.js": "^0.0.20",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
