--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     ]
   },
   "dependencies": {
+    "@upstash/redis": "^1.36.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
     "next": "15.1.6",
+    "openai": "^6.16.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^3.4.0"
