--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -24,12 +24,14 @@
     ]
   },
   "dependencies": {
+    "@prisma/client": "^6.19.2",
     "@upstash/redis": "^1.36.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
     "next": "15.1.6",
     "openai": "^6.16.0",
+    "prisma": "^6.19.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^3.4.0"
