--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
     "next": "15.1.6",
+    "next-intl": "^4.8.0",
     "openai": "^6.16.0",
     "prisma": "^6.19.2",
     "react": "19.0.0",
